--- a/.config/kitty/nord_snow_storm.conf
+++ b/.config/kitty/nord_snow_storm.conf
@@ -6,13 +6,13 @@
 # nord6: ECEFF4
 
 #foreground            #D8DEE9
-foreground            #2E3440
+foreground            #4C566A
 #background            #2E3440
 background            #ECEFF4
 selection_foreground  #FFFFFF 
-selection_background  #CDEAFF
+selection_background  #7B88A1
 url_color             #0087BD
-cursor                #67809A
+cursor                #4C566A
 
 # black
 color0   #3B4252
